--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="section-panel">
                     <p class="title-text">Доступні ліки в аптеці </p>
                     <button class="seeBtn">
-                        <img src="/images/pig.svg" alt="See the cheapest option">
+                        <img src="images/pig.svg" alt="See the cheapest option">
                     </button>
                 </div>
 
@@ -66,13 +66,13 @@
                     </div>
 
                     <div class="design-items bottom-block ">
-                        <img src="/images/herb1.png" alt="">
-                        <img src="/images/herb2.png" alt="">
-                        <img src="/images/herb3.png" alt="">
-                        <img src="/images/herb4.png" alt="">
-                        <img src="/images/herb5.png" alt="">
-                        <img src="/images/herb6.png" alt="">
-                        <img src="/images/herb7.png" alt="">
+                        <img src="images/herb1.png" alt="">
+                        <img src="images/herb2.png" alt="">
+                        <img src="images/herb3.png" alt="">
+                        <img src="images/herb4.png" alt="">
+                        <img src="images/herb5.png" alt="">
+                        <img src="images/herb6.png" alt="">
+                        <img src="images/herb7.png" alt="">
                     </div>
                 </div>
                 
