--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <!--Ціна-->
                     <div class="form-group">
                         <label for="price">Ціна</label>
-                        <input type="text" id="price" name="price" required placeholder="150" class="text-usual"/>
+                        <input type="number" id="price" name="price" required placeholder="150" class="text-usual"/>
                     </div>
 
                     <!-- Button -->
@@ -55,7 +55,7 @@
             <section class="right-section">
                 <div class="section-panel">
                     <p class="title-text">Доступні ліки в аптеці </p>
-                    <button class="seeBtn">
+                    <button class="seeBtn" type="button">
                         <img src="images/pig.svg" alt="See the cheapest option">
                     </button>
                 </div>
@@ -80,5 +80,7 @@
         </div>
 
     </main>
+
+    <script src="scripts/main.js"></script>
 </body>
 </html>
